--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,7 @@ position: fixed;
  background-color: #fff;
  z-index: 1;
 }
+
 .container{
   margin-top: 10%;
   display: grid;
@@ -101,6 +102,9 @@ position: fixed;
   margin: 1% 15%;
   padding: 1% 1%;
   text-align: center;
+}
+.grid-container img{
+  width: 100%;
 }
 
 .sub-grid-container{
