--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,33 @@
+:root {
+  --clr-neutral-900: hsl(207, 19%, 9%);
+  --clr-neutral-100: hsl(0, 0%, 100%);
+  --clr-accent-400: #fb6930;
+}
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 * {
   margin: 0px;
   padding: 0px;
   font-family: Montserrat;
   box-sizing: border-box;
-
 }
-h2{
+h2 {
   text-align: center;
   text-decoration: underline;
-  
 }
-::selection{
+img {
+  max-width: 100%;
+  display: block;
+}
+::selection {
   background-color: #ffc26c;
 }
 
-.Navbar{
- 
+.Navbar {
   display: flex;
   margin-left: 30%;
   margin-right: 100px;
@@ -23,45 +35,57 @@ h2{
   font-weight: 500;
   justify-content: space-between;
 }
-.navbar-sticky{
-position: fixed;
- top: 0%;
- width: 100%;
- background-color: #fff;
- z-index: 1;
+.navbar-sticky {
+  position: fixed;
+  top: 0%;
+  width: 100%;
+  background-color: #fff;
+  z-index: 1;
 }
+.container {
+  text-align: center;
 
-.container{
-  margin-top: 10%;
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  
+  grid-auto-flow: column;
+
+  margin: 3% auto;
 }
-:where(.flow :not(:first-child)){
-  margin-top: var(--flow-spacer,4em);
+:where(.flow) {
+  margin-top: var(--flow-spacer, 4em);
 }
-.even-column{
+.even-column {
   display: grid;
   gap: 1em;
   margin-top: 96px;
   text-align: center;
 }
+
+.scroll {
+  visibility: hidden;
+}
+
 @media (min-width: 50em) {
   .even-column {
     grid-auto-flow: column;
     grid-auto-columns: 1fr;
   }
+
+  .scroll {
+    visibility: visible;
+  }
+  .scroll img {
+    display: inline;
+  }
 }
-.even-column h1{
+.even-column h1 {
   font-weight: 800;
   font-size: 58px;
   line-height: 80px;
-  color:  #252B42;
+  color: #252b42;
   letter-spacing: 0.2px;
   text-align: center;
 }
-.even-column p{
-  
+.even-column p {
   font-weight: 400;
   font-size: 20px;
   line-height: 38px;
@@ -71,94 +95,160 @@ position: fixed;
   text-align: center;
   margin-bottom: 26px;
 }
-.illustration{
+.illustration {
   width: 688px;
   height: 443px;
 }
-.about{
+.about {
   text-align: center;
-  margin: 8% 17%;
+  margin: 10% 17% 6%;
 }
-.about h1{
+#team {
+  text-decoration: none;
+}
+.about h1 {
   text-decoration: underline;
-  text-decoration-thickness:2px;
-  
-  color: #252B42;
+  text-decoration-thickness: 2px;
+
+  color: #252b42;
+
   font-weight: 600;
   line-height: 80px;
   letter-spacing: 0.2px;
 }
-.about p{
+
+.about p {
   color: #000;
   line-height: 38px;
   font-weight: 400;
   letter-spacing: 0.2px;
   font-size: 20px;
 }
-.grid-container{
+
+.grid-container {
   background-color: rgba(217, 217, 217, 1);
   border-radius: 23px;
   position: relative;
-  margin: 1% 15%;
+  margin: 1% 15% 10%;
   padding: 1% 1%;
-  text-align: center;
 }
-.grid-container img{
+.grid-container img {
   width: 100%;
 }
 
-.sub-grid-container{
-  
-  position: relative;
-  
-  padding: 1% 1%;
+.sub-grid-container {
   display: flex;
   flex-wrap: wrap;
   border-radius: 23px;
   justify-content: space-around;
 }
-.grid-item{
-  text-align: center;
+
+.grid-item {
   margin: 1%;
   border-radius: 23px;
-  position:relative ;
-  /* top: 200px; */
+  /* position:relative ; */
+
   height: 200px;
   width: 200px;
   background-color: #fff;
   display: flex;
   justify-content: center;
 }
-.grid-item p{
-  text-align: center;
-position: absolute;
-bottom: 26px;
 
+@media (max-width: 50rem) {
+  .grid-item {
+    width: 100px;
+    height: 100px;
+    justify-content: initial;
+  }
+  .button {
+    visibility: hidden;
+  }
+  .card {
+    word-wrap: normal;
+  }
+  .card-content {
+    background: none !important;
+  }
 }
 
-.form-group{
+/* Card  */
+.card {
+  background-size: cover;
+  border-radius: 23px;
+  overflow: hidden;
+  text-align: center;
+  transition: transform 500ms ease;
+  background-image: url();
+}
+.card:hover,
+.card:focus-within {
+  transform: scale(1.03);
+}
+.card-content {
+  position: absolute;
+
+  width: 100%;
+
+  --padding: 1.5rem;
+  padding: var(--padding);
+  background: linear-gradient(hsl(0 0% 0% /0), hsl(0 0% 0% /0.4));
+}
+
+.card:hover .card-title::after,
+.card:focus-within .card-content::after {
+  transform: scaleX(1);
+}
+
+@media (hover) {
+  .card-content {
+    transform: translateY(90%);
+    transition: transform 500ms ease;
+  }
+  .card:hover .card-content,
+  .card:focus-within .card-content {
+    transform: translateY(38%);
+    transition-delay: 500ms;
+  }
+  .card:focus-within .card-content {
+    transition-duration: 0ms;
+  }
+  .card-title::after {
+    transform: scaleX(0);
+  }
+}
+
+.button {
+  display: inline-block;
+  text-decoration: none;
+  color: var(--clr-neutral-900);
+  background-color: white;
+  padding: 0.3em 1em;
+  border-radius: 23px;
+}
+.button:hover,
+.button:focus {
+  background-color: var(--clr-neutral-100);
+}
+
+.form-group {
   margin-bottom: 3%;
   margin: 1%;
-  
 }
-.form-container{
- margin: 0 22%; 
- text-align: center;
- 
+.form-container {
+  margin: 0 22%;
+  text-align: center;
 }
 
-.form-group{
+.form-group {
   margin: 0%;
-  
 }
-.form-control{
-  margin-bottom: 5% ;
+.form-control {
+  margin-bottom: 5%;
 }
-.btn{
+.btn {
   margin-bottom: 2%;
 }
-
-
 
 /* Footer */
 .footer {
@@ -168,15 +258,14 @@ bottom: 26px;
   height: 100%;
 }
 
-.contact-us 
-  p ,h2 {
-    margin: 0px;
-    /* font-weight: bold; */
-  }
-.contact-us 
-p{
+.contact-us p,
+h2 {
+  margin: 0px;
+  /* font-weight: bold; */
+}
+.contact-us p {
   color: grey;
-}  
+}
 
 .footer-container {
   width: 80%;
@@ -189,6 +278,8 @@ p{
   margin: auto;
   width: 100%;
   height: 200px;
+
+  text-align: left;
 }
 .footer-items ul {
   padding: 0px;
@@ -211,10 +302,10 @@ p{
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
   width: 360px;
   margin: 40px auto;
-  
 }
 .social a {
-  display: flex ;
+  display: flex;
+
   justify-content: center;
   align-items: center;
 }
