--- a/src/CSS/App.css
+++ b/src/CSS/App.css
@@ -3,7 +3,6 @@
   padding: 0px;
   font-family: Montserrat;
   box-sizing: border-box;
-
 }
 h2{
   text-align: center;
@@ -166,6 +165,7 @@ bottom: 26px;
   margin: auto;
   border-top: 1px solid rgb(182, 182, 182);
   height: 100%;
+  
 }
 
 .contact-us 
@@ -246,6 +246,11 @@ p{
   width: 100%;
   height: 200px;
 }
+
+
+.cf:after {
+  clear: both;
+}
 @media (max-width: 991px) {
   .footer-container {
     display: flex;
@@ -278,3 +283,5 @@ p{
     display: none;
   }
 }
+
+
