--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,19 @@
+:root {
+  --clr-neutral-900: hsl(207, 19%, 9%);
+  --clr-neutral-100: hsl(0, 0%, 100%);
+  --clr-accent-400: #fb6930;
+}
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 * {
   margin: 0px;
   padding: 0px;
   font-family: Montserrat;
-  box-sizing: border-box;
+  /* box-sizing: border-box; */
 
 }
 h2{
@@ -10,18 +21,32 @@ h2{
   text-decoration: underline;
   
 }
-::selection{
+img {
+  max-width: 100%;
+  display: block;
+}
+::selection {
   background-color: #ffc26c;
 }
 
 .Navbar{
  
   display: flex;
+  flex: 1;
   margin-left: 30%;
   margin-right: 100px;
+  
   width: 100%;
   font-weight: 500;
   justify-content: space-between;
+ 
+}
+/* .navbar-brand img{
+  width: 100px;
+} */
+.navbar{
+  box-shadow: 0  0 20px 0px rgba(0,0,0,0.2);
+  display: flex;
 }
 .navbar-sticky{
 position: fixed;
@@ -30,15 +55,39 @@ position: fixed;
  background-color: #fff;
  z-index: 1;
 }
+.flow h1{
+  text-align: center;
+}
+#illustration img{
+  margin: auto;
+  /* align-items: center; */
+}
+@media (max-width:700px){
+  #heading{
+      font-size: 40px;
+  }
+}
+@media (max-width:700px){
+  #para{
+      font-size: 20px;
+  }
+}
+@media (max-width:700px){
+ .grid-item div p  {
+      font-size: 10px;
+  }
+}
 
-.container{
-  margin-top: 10%;
+
+.container {
+  text-align: center;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-auto-flow: column;
+  margin: 2% auto;
   
 }
-:where(.flow :not(:first-child)){
-  margin-top: var(--flow-spacer,4em);
+:where(.flow) {
+  margin-top: var(--flow-spacer, 4em);
 }
 .even-column{
   display: grid;
@@ -46,17 +95,26 @@ position: fixed;
   margin-top: 96px;
   text-align: center;
 }
+.scroll {
+  visibility: hidden;
+}
 @media (min-width: 50em) {
   .even-column {
     grid-auto-flow: column;
     grid-auto-columns: 1fr;
+  }
+  .scroll {
+    visibility: visible;
+  }
+  .scroll img {
+    display: inline;
   }
 }
 .even-column h1{
   font-weight: 800;
   font-size: 58px;
   line-height: 80px;
-  color:  #252B42;
+  color:  #252b42;
   letter-spacing: 0.2px;
   text-align: center;
 }
@@ -77,13 +135,16 @@ position: fixed;
 }
 .about{
   text-align: center;
-  margin: 8% 17%;
+  margin: 10% 17% 6%;
+}
+#team {
+  text-decoration: none;
 }
 .about h1{
   text-decoration: underline;
   text-decoration-thickness:2px;
   
-  color: #252B42;
+  color: #252b42;
   font-weight: 600;
   line-height: 80px;
   letter-spacing: 0.2px;
@@ -99,7 +160,7 @@ position: fixed;
   background-color: rgba(217, 217, 217, 1);
   border-radius: 23px;
   position: relative;
-  margin: 1% 15%;
+  margin: 1% 15% 10%;
   padding: 1% 1%;
   text-align: center;
 }
@@ -108,20 +169,16 @@ position: fixed;
 }
 
 .sub-grid-container{
-  
-  position: relative;
-  
-  padding: 1% 1%;
   display: flex;
   flex-wrap: wrap;
   border-radius: 23px;
   justify-content: space-around;
 }
 .grid-item{
-  text-align: center;
+ 
   margin: 1%;
   border-radius: 23px;
-  position:relative ;
+ 
   /* top: 200px; */
   height: 200px;
   width: 200px;
@@ -129,14 +186,82 @@ position: fixed;
   display: flex;
   justify-content: center;
 }
-.grid-item p{
-  text-align: center;
-position: absolute;
-bottom: 26px;
-
+@media (max-width: 50rem) {
+  .grid-item {
+    width: 100px;
+    height: 100px;
+    justify-content: initial;
+  }
+  .button {
+    visibility: hidden;
+  }
+  .card {
+    word-wrap: normal;
+  }
+  .card-content {
+    background: none !important;
+  }
 }
 
-.form-group{
+/* Card  */
+.card {
+  background-size: cover;
+  border-radius: 23px;
+  overflow: hidden;
+  text-align: center;
+  transition: transform 500ms ease;
+  background-image: url();
+}
+.card:hover,
+.card:focus-within {
+  transform: scale(1.03);
+}
+.card-content {
+  position: absolute;
+
+  width: 100%;
+
+  --padding: 1.5rem;
+  padding: var(--padding);
+  background: linear-gradient(hsl(0 0% 0% /0), hsl(0 0% 0% /0.4));
+}
+
+.card:hover .card-title::after,
+.card:focus-within .card-content::after {
+  transform: scaleX(1);
+}
+
+@media (hover) {
+  .card-content {
+    transform: translateY(90%);
+    transition: transform 500ms ease;
+  }
+  .card:hover .card-content,
+  .card:focus-within .card-content {
+    transform: translateY(38%);
+    transition-delay: 500ms;
+  }
+  .card:focus-within .card-content {
+    transition-duration: 0ms;
+  }
+  .card-title::after {
+    transform: scaleX(0);
+  }
+}
+.button {
+  display: inline-block;
+  text-decoration: none;
+  color: var(--clr-neutral-900);
+  background-color: white;
+  padding: 0.3em 1em;
+  border-radius: 23px;
+}
+.button:hover,
+.button:focus {
+  background-color: var(--clr-neutral-100);
+}
+
+.form-group {
   margin-bottom: 3%;
   margin: 1%;
   
@@ -169,7 +294,7 @@ bottom: 26px;
 }
 
 .contact-us 
-  p ,h2 {
+  h2 {
     margin: 0px;
     /* font-weight: bold; */
   }
@@ -189,6 +314,7 @@ p{
   margin: auto;
   width: 100%;
   height: 200px;
+  text-align: left;
 }
 .footer-items ul {
   padding: 0px;
@@ -196,7 +322,7 @@ p{
 }
 .footer-items h5 {
   color: black;
-  /* font-weight: bold; */
+  font-weight: bold;
 }
 .footer-items ul li a {
   text-decoration: none;
