--- a/src/App.css
+++ b/src/App.css
@@ -194,7 +194,9 @@ img {
   padding: var(--padding);
   background: linear-gradient(hsl(0 0% 0% /0), hsl(0 0% 0% /0.4));
 }
-
+.card-title {
+  color: #fff;
+}
 .card:hover .card-title::after,
 .card:focus-within .card-content::after {
   transform: scaleX(1);
