--- a/src/App.css
+++ b/src/App.css
@@ -47,6 +47,7 @@ img {
 
   display: grid;
   grid-auto-flow: column;
+
   margin: 3% auto;
 }
 :where(.flow) {
@@ -55,7 +56,7 @@ img {
 .even-column {
   display: grid;
   gap: 1em;
-  margin-top: 15%;
+  margin-top: 96px;
   text-align: center;
 }
 
@@ -100,7 +101,7 @@ img {
 }
 .about {
   text-align: center;
-  margin: 8%;
+  margin: 10% 17% 6%;
 }
 #team {
   text-decoration: none;
@@ -123,33 +124,14 @@ img {
   letter-spacing: 0.2px;
   font-size: 20px;
 }
-@media screen and (max-width: 1200px) {
-  .grid-container {
-    background-color: rgba(217, 217, 217, 1);
-    border-radius: 23px;
-    position: relative;
-    margin: 1% 8% 1%;
-    padding: 1% 1%;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .grid-container {
-    background-color: rgba(217, 217, 217, 1);
-    border-radius: 23px;
-    position: relative;
-    margin: 1% 15% 10%;
-    padding: 1% 1%;
-  }
-}
 
-
-/* .grid-container {
+.grid-container {
   background-color: rgba(217, 217, 217, 1);
   border-radius: 23px;
   position: relative;
   margin: 1% 15% 10%;
   padding: 1% 1%;
-} */
+}
 .grid-container img {
   width: 100%;
 }
@@ -253,17 +235,9 @@ img {
   margin-bottom: 3%;
   margin: 1%;
 }
-@media screen and (max-width : 1200px){
-  .form-container {
-    margin: 0 8%;
-    text-align: center;
-  }
-}
-@media screen and (min-width : 1200px){
-  .form-container {
-    margin: 0 14%;
-    text-align: center;
-  }
+.form-container {
+  margin: 0 22%;
+  text-align: center;
 }
 
 .form-group {
