--- a/src/App.css
+++ b/src/App.css
@@ -196,13 +196,25 @@ img {
 @media screen and (min-width: 1320px) {
   .grid-container {
     background-color: rgba(217, 217, 217, 1);
-    border-radius: 23px;
+    border-radius: 13px;
     position: relative;
     margin: 1% 8% 10%;
     padding: 1% 1%;
   }
 
 }
+@media screen and (max-width:800px){
+  .card-content p{
+    position: absolute;
+    bottom: -25px;
+    font-size: 10px;
+    left: 10px;
+    background: rgba(9, 36, 49, 0.7);
+    display: inline-block;
+    
+  }
+}
+
 
 .sub-grid-container {
   display: flex;
